--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,61 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{costa2021old,
+  title={The old guard: Age-related changes in microglia and their consequences},
+  author={Costa, J{\'e}ssica and Martins, Solange and Ferreira, Pedro A and Cardoso, Ana MS and Guedes, Joana R and Pe{\c{c}}a, Jo{\~a}o and Cardoso, Ana L},
+  journal={Mechanisms of Ageing and Development},
+  volume={197},
+  pages={111512},
+  year={2021},
+  publisher={Elsevier}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{franco2020social,
+  title={Social subordination induced by early life adversity rewires inhibitory control of the prefrontal cortex via enhanced Npy1r signaling},
+  author={Franco, Lara O and Carvalho, M{\'a}rio J and Costa, J{\'e}ssica and Ferreira, Pedro A and Guedes, Joana R and Sousa, Renato and Edfawy, Mohamed and Seabra, Catarina M and Cardoso, Ana L and Pe{\c{c}}a, Jo{\~a}o},
+  journal={Neuropsychopharmacology},
+  volume={45},
+  number={9},
+  pages={1438--1447},
+  year={2020},
+  publisher={Nature Publishing Group}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{guedes2022microglia,
+  title={Microglia-dependent remodeling of neuronal circuits},
+  author={Guedes, Joana R and Ferreira, Pedro A and Costa, J{\'e}ssica M and Cardoso, Ana L and Pe{\c{c}}a, Jo{\~a}o},
+  journal={Journal of Neurochemistry},
+  volume={163},
+  number={2},
+  pages={74--93},
+  year={2022}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{guedes20234,
+  title={IL-4 shapes microglia-dependent pruning of the cerebellum during postnatal development},
+  author={Guedes, Joana R and Ferreira, Pedro A and Costa, J{\'e}ssica and Laranjo, Mariana and Pinto, Maria J and Reis, Tiago and Cardoso, Ana Maria and Lebre, Carolina and Casquinha, Maria and Gomes, Marcos and others},
+  journal={Neuron},
+  volume={111},
+  number={21},
+  pages={3435--3449},
+  year={2023},
+  publisher={Elsevier}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{edfawy2019abnormal,
+  title={Abnormal mGluR-mediated synaptic plasticity and autism-like behaviours in Gprasp2 mutant mice},
+  author={Edfawy, Mohamed and Guedes, Joana R and Pereira, Marta I and Laranjo, Mariana and Carvalho, M{\'a}rio J and Gao, Xian and Ferreira, Pedro A and Caldeira, Gladys and Franco, Lara O and Wang, Dongqing and others},
+  journal={Nature communications},
+  volume={10},
+  number={1},
+  pages={1431},
+  year={2019},
+  publisher={Nature Publishing Group UK London}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
+@article{ferreira2023vivo,
+  title={In vivo recordings in freely behaving mice using independent silicon probes targeting multiple brain regions},
+  author={Ferreira-Fernandes, Emanuel and Laranjo, Mariana and Reis, Tiago and Canijo, B{\'a}rbara and Ferreira, Pedro A and Martins, Pedro and Vilarinho, Jo{\~a}o and Tavakoli, Mahmoud and Kunicki, Carolina and Pe{\c{c}}a, Jo{\~a}o},
+  journal={Frontiers in Neural Circuits},
   volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+  year={2023},
+  publisher={Frontiers Media SA}
 }
