--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,8 @@
   pages={111512},
   year={2021},
   publisher={Elsevier}
+  bibtex_show={true}
+  abbr={Mech Ageing Dev}
 }
 
 @article{franco2020social,
@@ -17,6 +19,8 @@
   pages={1438--1447},
   year={2020},
   publisher={Nature Publishing Group}
+  bibtex_show={true}
+  abbr={Neuropsychopharmacology}
 }
 
 @article{guedes2022microglia,
