--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,8 +5,8 @@
   volume={197},
   pages={111512},
   year={2021},
-  publisher={Elsevier}
-  bibtex_show={true}
+  publisher={Elsevier},
+  bibtex_show={true},
   abbr={Mech Ageing Dev}
 }
 
@@ -18,8 +18,8 @@
   number={9},
   pages={1438--1447},
   year={2020},
-  publisher={Nature Publishing Group}
-  bibtex_show={true}
+  publisher={Nature Publishing Group},
+  bibtex_show={true},
   abbr={Neuropsychopharmacology}
 }
 
