--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
   year={2020},
   publisher={Nature Publishing Group},
   bibtex_show={true},
-  abbr={Neuropsychopharmacology}
+  abbr={NeuroPsychPharm}
 }
 
 @article{guedes2022microglia,
@@ -31,6 +31,8 @@
   number={2},
   pages={74--93},
   year={2022}
+  bibtex_show={true},
+  abbr={J.Neur}
 }
 
 @article{guedes20234,
@@ -42,6 +44,8 @@
   pages={3435--3449},
   year={2023},
   publisher={Elsevier}
+  bibtex_show={true},
+  abbr={Neuron}
 }
 
 @article{edfawy2019abnormal,
@@ -53,6 +57,8 @@
   pages={1431},
   year={2019},
   publisher={Nature Publishing Group UK London}
+  bibtex_show={true},
+  abbr={Nat.Comms}
 }
 
 @article{ferreira2023vivo,
@@ -62,4 +68,6 @@
   volume={17},
   year={2023},
   publisher={Frontiers Media SA}
+  bibtex_show={true},
+  abbr={Front.NeurCirc}
 }
