--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,7 +30,7 @@
   volume={163},
   number={2},
   pages={74--93},
-  year={2022}
+  year={2022},
   bibtex_show={true},
   abbr={J.Neur}
 }
@@ -43,7 +43,7 @@
   number={21},
   pages={3435--3449},
   year={2023},
-  publisher={Elsevier}
+  publisher={Elsevier},
   bibtex_show={true},
   abbr={Neuron}
 }
@@ -56,7 +56,7 @@
   number={1},
   pages={1431},
   year={2019},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
   bibtex_show={true},
   abbr={Nat.Comms}
 }
@@ -67,7 +67,7 @@
   journal={Frontiers in Neural Circuits},
   volume={17},
   year={2023},
-  publisher={Frontiers Media SA}
+  publisher={Frontiers Media SA},
   bibtex_show={true},
   abbr={Front.NeurCirc}
 }
